# agentic_crypto_trading_bot

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
ai/: ai_agent.py
ai/chains/: ai_desk.py  trade_advisor.py
ai/llm/: openai_client.py  settings.py
ai/llm/prompts/: ai_desk.py  template_loader.py  trade_decision.py
ai/llm/prompts/templates/: ai_desk.j2  trade_decision.j2
ai/middleware/: input_sanitizer.py  message_trimmer.py  trading_error_handler.py
ai/rag/: retrievers.py
ai/schemas/: trade.py
ai/storage/: db_access.py
ai/tools/: crypto_combined_analysis.py  crypto_fundamentals.py  crypto_regime.py  rag_search.py  registry.py  web_load.py  web_search.py  wikipedia_load.py
ai/utils/: crypto_data.py  data_fetchers.py  regime_analysis.py
bot/: bot_engine.py  config_manager.py  data_fetcher.py  database_manager.py  logger_manager.py  okx_broker.py  order_monitor.py  run_bot.py  signal_generator.py  trade_executor.py
common_utils/: utils.py
storage/: fast_check_db.ipynb  init_db.py  schema.sql  trading_mockup.db
storage/configs/: available_pairs.json  personas.json
storage/knowledge_base/playbooks/: macro_drivers.md
storage/knowledge_base/var/faiss_index/: index.faiss  index.pkl
ui/: app.py  events.py  sidebar.py  state.py  utils.py
ui/data_access/: configs.py  trades.py
ui/tabs/: about.py  ai_desk.py  trades_analysis.py  trading_configs.py
ui/widgets/: charts.py  exports.py
