[project]
name = "agentic-crypto-bot"
version = "0.1.0"
description = "An autonomous crypto trading bot using LangChain and OpenAI."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langsmith>=0.5.0",
    "okx>=2.1.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "plotly>=6.5.0",
    "pycoingecko>=3.2.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "python-okx>=0.4.0",
    "reportlab>=4.4.7",
    "scipy>=1.16.3",
    "streamlit>=1.52.2",
    "ta>=0.11.0",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.66",
]
